--- a/ClinicaAppFrontEnd/Content/bootstrap.css
+++ b/ClinicaAppFrontEnd/Content/bootstrap.css
@@ -118,8 +118,7 @@ optgroup,
 select,
 textarea {
   color: inherit;
-  font: inherit;
-  margin: 0;
+  margin: 0 0 0 0px;
 }
 button {
   overflow: visible;
@@ -2348,6 +2347,7 @@ pre code {
 }
 table {
   background-color: transparent;
+    margin-top: 5px;
 }
 table col[class*="col-"] {
   position: static;
@@ -2608,6 +2608,7 @@ label {
   max-width: 100%;
   margin-bottom: 5px;
   font-weight: 700;
+    margin-left: 0px;
 }
 input[type="search"] {
   -webkit-box-sizing: border-box;
